# chzzk-plays-game

./: .env.example  .gitignore  README.md  plan-rough-draft.md
backend/: .env.example  COMPLIANCE_CHECKLIST.md  PRIVACY_POLICY_TEMPLATE.md  pyproject.toml  run.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: admin.py  donation.py  health.py  privacy.py  queue.py  router.py  stats.py
backend/app/core/: constants.py  exceptions.py  logging.py
backend/app/db/: connection.py
backend/app/db/migrations/: 001_initial.sql
backend/app/db/repositories/: __init__.py  access_log_repo.py  ban_repo.py  donation_repo.py  stats_repo.py
backend/app/models/: donation.py  prompt.py  queue.py  stats.py
backend/app/services/: __init__.py  agent_runner.py  ban.py  connection_manager.py  cooldown.py  cost_tracker.py  donation_listener.py  git_manager.py  health.py  orchestrator.py  privacy.py  security.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_ban_flow.py  test_donation_flow.py  test_privacy_e2e.py  test_security_e2e.py  test_websocket.py
backend/tests/unit/: test_agent_runner.py  test_compliance.py  test_cooldown.py  test_cost_tracker.py  test_donation_listener.py  test_git_manager.py  test_models.py  test_orchestrator.py  test_orchestrator_cost_integration.py  test_privacy.py  test_repositories.py  test_security.py  test_tier.py
overlay/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
overlay/src/: App.tsx  index.css
scripts/: health_check.py  start.sh
(+13 files in other folders)
