[project]
name = "chzzk-plays-gamedev"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "claude-agent-sdk>=0.1.53,<1.0",
    "chzzkpy>=2.1.5,<3.0",
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.7.0,<3.0",
    "aiosqlite>=0.20.0,<1.0",
    "structlog>=24.4.0,<26.0",
    "asgi-lifespan>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "httpx>=0.28.0,<1.0",
    "ruff>=0.8.0,<1.0",
    "mypy>=1.13.0,<2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008", "B904", "B905", "E501", "F841"]  # FastAPI patterns and test code

[tool.ruff.lint.isort]
known-first-party = ["app"]
